--- a/profapp/templates/partials/head.html
+++ b/profapp/templates/partials/head.html
@@ -28,8 +28,8 @@
 <link href="{{ static_address('front/css/style.css') }}" rel="stylesheet">
 <link rel="stylesheet" href="{{ static_address('css/oles.css') }}">
 <link href="{{ static_address('css/article.css') }}" rel="stylesheet">
-<link href="{{ static_address('front/bird/css/article.css') }}" rel="stylesheet">
-<link href="{{ static_address('front/bird/css/style.css') }}" rel="stylesheet">
+{#<link href="{{ static_address('front/bird/css/article.css') }}" rel="stylesheet">#}
+{#<link href="{{ static_address('front/bird/css/style.css') }}" rel="stylesheet">#}
 
 {{ config_variables()|safe }}
 
