--- a/profapp/templates/article/material_details.html
+++ b/profapp/templates/article/material_details.html
@@ -24,7 +24,7 @@
 
             {#            $scope.url_search_for_user = {{ raw_url_for('company.search_for_user')|safe }};#}
             $scope.url_company_portal_memberees = {{ grid_raw_url_for('company.portal_memberees')|safe }};
-            $scope.url_update_material = {{ raw_url_for('article.article_show_form')|safe }};
+            $scope.url_update_material = {{ raw_url_for('article.edit_material')|safe }};
             $scope.url_publication_change_status = {{ raw_url_for('article.publication_change_status')|safe }};
             $scope.url_front_publication_details = {{ raw_url_for('front.article_details')|safe }};
 
