--- a/profapp/templates/company/materials.html
+++ b/profapp/templates/company/materials.html
@@ -22,9 +22,9 @@
             $scope.url_search_article = {{ raw_url_for('company.materials_load')|safe }};
 
             $scope.url_material_details = {{ raw_url_for('article.material_details')|safe }};
-            $scope.url_material_create = {{ raw_url_for('article.article_show_form')|safe }};
-            $scope.url_material_update = {{ raw_url_for('article.article_show_form')|safe }};
-            $scope.url_publication_update = {{ raw_url_for('article.article_show_form')|safe }};
+            $scope.url_material_create = {{ raw_url_for('article.edit_material')|safe }};
+            $scope.url_material_update = {{ raw_url_for('article.edit_material')|safe }};
+            $scope.url_publication_update = {{ raw_url_for('article.edit_material')|safe }};
             $scope.actions = {{ actions|safe }}
 
 
