show gallery simple script

--- a/profapp/static/front/Simple/css/article.css
+++ b/profapp/static/front/Simple/css/article.css
@@ -1,1 +1,7 @@
-../../bird/css/article.css
+img.data-mce-image-gallery-placeholder {
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+
+}
