--- a/profapp/templates/front/Simple/article_details.html
+++ b/profapp/templates/front/Simple/article_details.html
@@ -47,4 +47,9 @@
     </div>
     <br/>
     {% include 'article_social.html' %}
+    <script>
+        $(function () {
+            set_all_images_galleries('{{ url_for('article.gallery_load') }}');
+        });
+    </script>
 {% endblock %}
