--- a/profapp/templates/front/Forester/article_details.html
+++ b/profapp/templates/front/Forester/article_details.html
@@ -7,7 +7,7 @@
     {% include 'tags_menu.html' %}
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-lg-10">
+            <div class="col-xs-12 col-md-9">
                 <main class="clearfix" role="main">
                     <article class="article-full">
                         <!--Main article image-->
@@ -77,7 +77,7 @@
                 {#</nav>#}
             </div>
             <!--Vertical banners-->
-            <aside class="col-xs-12 col-lg-2">
+            <aside class="col-xs-12 col-md-3">
                 {% include 'right_banners.html' %}
             </aside>
         </div>
