--- a/profapp/templates/front/Forester/layout.html
+++ b/profapp/templates/front/Forester/layout.html
@@ -46,6 +46,10 @@
     <script src="{{ static_address('front/' + portal.layout.name + '/js/jasny-bootstrap.min.js') }}"></script>
     <script src="{{ static_address('front/' + portal.layout.name + '/js/jquery.dotdotdot.min.js') }}"></script>
     <script src="{{ static_address('front/' + portal.layout.name + '/js/custom.js') }}"></script>
+
+    <link href="{{ static_address('tinymce.pr/plugins/tinymce-gallery-plugin/image_gallery.css') }}" rel="stylesheet">
+    <script src="{{ static_address('tinymce.pr/plugins/tinymce-gallery-plugin/image_gallery.js') }}" data-gallery-load-url="{{ url_for('article.gallery_load') }}"></script>
+
     <script>
         window.addEventListener("message", function (messageevent) {
         console.log(messageevent);
