--- a/profapp/static/tinymce.pr/plugins/tinymce-gallery-plugin/plugin.css
+++ b/profapp/static/tinymce.pr/plugins/tinymce-gallery-plugin/plugin.css
@@ -1,3 +1,6 @@
+.mce-pr-image-gallery-dialog .mce-pr-image-gallery-calculate-size {
+  margin-left: 3em;
+}
 .mce-pr-image-gallery-dialog .mce-pr-sortable-images ul {
   height: 350px;
   overflow: auto;
