--- a/profapp/static/tinymce.pr/plugins/tinymce-gallery-plugin/plugin.less
+++ b/profapp/static/tinymce.pr/plugins/tinymce-gallery-plugin/plugin.less
@@ -1,4 +1,10 @@
+
 .mce-pr-image-gallery-dialog {
+
+  .mce-pr-image-gallery-calculate-size {
+    margin-left: 3em;
+  }
+
   .mce-pr-sortable-images {
     ul {
       height: 350px;
