--- a/profapp/templates/_ruslan/partials/_header_files_articles.html
+++ b/profapp/templates/_ruslan/partials/_header_files_articles.html
@@ -1,5 +1,6 @@
 <!---article---->
 <link rel="stylesheet" href="{{ static_address('tinymce.pr/plugins/tinymce-gallery-plugin/image_gallery.css') }}">
+<link rel="stylesheet" href="{{ static_address('tinymce.pr/plugins/tinymce-gallery-plugin/plugin.css') }}">
 
 <script src="{{ static_address('tinymce.pr/tinymce.jquery.pr.js') }}"></script>
 <script src="{{ static_address('tinymce.pr/plugins/tinymce-gallery-plugin/plugin.js') }}"></script>
