--- a/profapp/static/front/Forester/css/custom.css
+++ b/profapp/static/front/Forester/css/custom.css
@@ -93,7 +93,7 @@ p {
 
 /*Header settings*/
 
-@media(max-width: 1220px) {
+@media(max-width: 1270px) {
     .navbar-header {
         float: none;
     }
@@ -659,9 +659,9 @@ p {
 }
 
 .pr {
-    padding-top: 24px;
-    padding-bottom: 1.5em;
+    padding: 24px 0 24px 30px;
     color: #9d9d9d;
+    margin: 0 auto;
 }
 
 .pr-link {
