--- a/profapp/templates/front/Forester/article_details.html
+++ b/profapp/templates/front/Forester/article_details.html
@@ -18,7 +18,7 @@
 
                         <!--Article header-->
                         <header class="article-header">
-                            <a class="div-link" href="{{ url_for('front.division', division_name=article['portal_division']['name']) }}">{{ article['portal_division']['name']|safe }}</a>
+                            <a class="div-link" href="{{ url_for('front.division', division_name=article['portal_division']['url']) }}">{{ article['portal_division']['name']|safe }}</a>
                             <h1 class="article-headling">{{ article['title']|safe }}</h1>
                             {% if article['subtitle'] %}
                                 <h4 class="article-headling">{{ article['subtitle']|safe }}</h4>{% endif %}
