--- a/profapp/templates/front/Forester/header.html
+++ b/profapp/templates/front/Forester/header.html
@@ -22,7 +22,7 @@
                 {% for division_id, di in portal.divisions.items() %}
                     {% if di.portal_division_type_id in ['news', 'events', 'catalog'] %}
                         <li {% if division and di.id == division.id %}class="active"{% endif %}>
-                            <a href=" {{ url_for('front.division', division_name=di.name) }}">{{ di.name }}</a>
+                            <a href=" {{ url_for('front.division', division_name=di.url) }}">{{ di.name }}</a>
                         </li>
                     {% elif division and di.portal_division_type_id in ['company_subportal'] %}
                         <li {% if di.id == division.id %}class="active"{% endif %}>
