--- a/profapp/templates/front/Simple/company_menu.html
+++ b/profapp/templates/front/Simple/company_menu.html
@@ -23,7 +23,7 @@
                         <a href="{{ url_for('front.division',
                                    member_company_id = member_company['id'] ,
                                    member_company_name = member_company['name'],
-                                   division_name=division.name) }}">{{ division.name }}</a>
+                                   division_name=division.url) }}">{{ division.name }}</a>
                     </li>
                 {% endif %}
             {% endfor %}
