--- a/profapp/templates/partials/front-macros.html
+++ b/profapp/templates/partials/front-macros.html
@@ -11,7 +11,7 @@
 
 {% macro link_to_company(portal, company) %}
     {% if company['id'] in portal['subportals_by_companies_id'] %}
-        {{ url_for('front.division', division_name = portal['subportals_by_companies_id'][company['id']]['name']) }}
+        {{ url_for('front.division', division_name = portal['subportals_by_companies_id'][company['id']]['url']) }}
     {% else %}
         {{ url_for('front.company_member', member_company_id = company['id'], member_company_name = company['name']) }}
     {% endif %}
