--- a/profapp/templates/front/Forester/company_menu.html
+++ b/profapp/templates/front/Forester/company_menu.html
@@ -18,7 +18,7 @@
                             {% for division_id, division in portal.divisions.items() %}
                                 {% if division.portal_division_type_id == 'news' or division.portal_division_type_id == 'events' %}
                                     <li {% if 'id' in company_menu_selected_item and company_menu_selected_item['id'] == division.id %}class="active"{% endif %}>
-                                        <a href="{{ url_for('front.division', member_company_id = member_company['id'] , member_company_name = member_company['name'], division_name=division.name) }}">{{ division.name }}</a>
+                                        <a href="{{ url_for('front.division', member_company_id = member_company['id'] , member_company_name = member_company['name'], division_name=division.url) }}">{{ division.name }}</a>
                                     </li>
                                 {% endif %}
                             {% endfor %}
