--- a/profapp/templates/front/Simple/_common/block_menu.html
+++ b/profapp/templates/front/Simple/_common/block_menu.html
@@ -28,9 +28,9 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 {% for division_id, di in portal.divisions.items() %}
-                    {% if di.portal_division_type_id in ['news', 'events', 'catalog'] %}
+                    {% if di.portal_division_type_id not in ['index', 'company_subportal'] %}
                         <li {% if division and di.id == division.id %}class="active"{% endif %}>
-                            <a href="{{ url_for('front.division', division_name=di.name) }}">{{ di.name }}</a>
+                            <a href="{{ url_for('front.division', division_name=di.url) }}">{{ di.name }}</a>
                         </li>
                     {% elif division and di.portal_division_type_id in ['company_subportal'] %}
                         <li {% if di.id == division.id %}class="active"{% endif %}>
