--- a/profapp/templates/front/Simple/article_short.html
+++ b/profapp/templates/front/Simple/article_short.html
@@ -1,7 +1,7 @@
 <div class="article article-short {% if article['illustration']['selected_by_user']['type'] != 'none' %}with-illustration{% endif %}">
     <div class="division-and-tags pr">
         <div class="division nw">
-            <a href="{{ url_for('front.division', division_name=article['portal_division']['name']) }}">{{ article['portal_division']['name']|safe }}</a>
+            <a href="{{ url_for('front.division', division_name=article['portal_division']['url']) }}">{{ article['portal_division']['name']|safe }}</a>
         </div>
         <div class="tags-at-right nw">
             {% if article.tags|length %}{% set tag = article.tags[0] %}
