--- a/profapp/templates/front/Simple/_common/block_menu.html
+++ b/profapp/templates/front/Simple/_common/block_menu.html
@@ -30,11 +30,13 @@
                 {% for division_id, di in portal.divisions.items() %}
                     {% if di.portal_division_type_id not in ['index', 'company_subportal'] %}
                         <li {% if division and di.id == division.id %}class="active"{% endif %}>
-                            <a href="{{ url_for('front.division', division_name=di.url) }}">{{ di.name }}</a>
+                            <a href="{{ url_for('front.division', division_id=di.id, division_name=di.url) }}">{{ di.name }}</a>
                         </li>
                     {% elif division and di.portal_division_type_id in ['company_subportal'] %}
                         <li {% if di.id == division.id %}class="active"{% endif %}>
-                            <a href="{{ url_for('front.company_page', member_company_id = di['subportal_company'].id, member_company_name = di['subportal_company'].name) }}">{{ di.name }}</a>
+                            <a href="{{ url_for('front.company_page',
+                            member_company_id = di['subportal_company'].id,
+                            member_company_name = di['url']) }}">{{ di.name }}</a>
                         </li>
                     {% endif %}
                 {% endfor %}
