--- a/profapp/templates/front/Forester/company_contacts.html
+++ b/profapp/templates/front/Forester/company_contacts.html
@@ -51,7 +51,7 @@
                 {% if member_company['address'] %}<p><i class="fa fa-inbox" aria-hidden="true" style="margin-right: 5px"></i>{{ member_company['address'] }}</p>{% endif %}
                 {% if member_company['phone'] %}<p><i class="fa fa-phone" aria-hidden="true" style="margin-right: 5px"></i>{{ member_company['phone'] }}</p>{% endif %}
                 {% if member_company['fax'] %}<p><i class="fa fa-fax" aria-hidden="true" style="margin-right: 5px"></i>{{ member_company['fax'] }}</p>{% endif %}
-                {% if member_company['email'] %}<p><i class="fa fa-envelope" aria-hidden="true" style="margin-right: 5px"></i>{{ member_company['email'] }}</p>{% endif %}
+                {% if member_company['web'] %}<p><i class="fa fa-home" aria-hidden="true" style="margin-right: 5px"></i>{{ member_company['web'] }}</p>{% endif %}
                 {% if member_company['host'] %}<a href=""><i class="fa fa-home" aria-hidden="true" style="margin-right: 5px"></i>{{ member_company['host'] }}</a>{% endif %}
             </div>
         </section>
